# meemi_kansio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  dev.sh  docker-compose.yml  test-db-compose.yaml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml  README.md  build.rs
backend/migrations/: 20260210162037_initial.down.sql  20260210162037_initial.up.sql  20260211120000_add_media_dimensions.down.sql  20260214120000_add_ocr_text.down.sql  20260214120000_add_ocr_text.up.sql  20260216180000_add_search_vector.down.sql  20260216180000_add_search_vector.up.sql
backend/src/: config.rs  error.rs  main.rs  ocr.rs  storage.rs  thumbnails.rs  video.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/models/: invite.rs  media.rs  mod.rs  tag.rs  user.rs
backend/src/routes/: auth.rs  invites.rs  media.rs  mod.rs  tags.rs  test_seed.rs
docs/: future_todo.md
docs/plans/: 2026-02-10-media-organizer-design.md  2026-02-10-project-initialization.md  2026-02-11-browse-page-design.md  2026-02-11-media-edit-delete-design.md  2026-02-11-media-upload-design.md  2026-02-12-media-copy-download-design.md  2026-02-12-media-page-redesign.md  2026-02-12-tag-editor-design.md  2026-02-12-tag-editor-impl.md  2026-02-12-tagging-and-filtering-design.md  (+15 more)
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
infra/: .terraform.lock.hcl  containers.tf  dns.tf  main.tf  outputs.tf  registry.tf  storage.tf  variables.tf
scripts/: reset-db.sh
(+56 files in other folders)
